# VkApi

./: pyproject.toml
vk/: main.py
vk/core/libs/: systemCommands.py  tool.py
vk/files/: BulletinBoard.json  config.json
vk/files/db/: videos.sqlite
