[tool.poetry]
name = "vk"
version = "0.1.0"
description = ""
authors = ["fu3fi <fu3fi@email.com>"]

[tool.poetry.dependencies]
python = "3.11.0"
riposte = "^0.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
vk = "vk.main:run"